# MSOUP

./: .gitignore  CLAUDE.md  DATA_READY.md  README.md  README_POCKET_TEST.md  README_data.md  catalog_config.yaml  clean_exponent_results.csv  clean_exponent_test.py  copy_globus.sh  data_manifest.csv  download_all.sh  prove_or_kill.py  quick_validate.py  requirements.txt  robust_matched_results.csv  run_all.py  stiffness_phase4_option1.py  two_gate_scaling.py  two_gate_simulation.py  validate_real.py
repo/: AUDIT.md  AUDIT_FIX_NOTES.md  README.md  _pip_freeze.txt  environment.yaml  preregistration.md  pyproject.toml  run_analysis.sh
repo/configs/: datasets.yaml  mverse_channel_example.json  mverse_channel_sweep.json  preregistration.yaml
repo/docs/: mverse_channel_overview.md
repo/outputs/: REPORT.json  REPORT.md
repo/scripts/: generate_figures.py  grid_diagnostic.py  health_check.py  make_prereg_pdf.py  power_scan.py  run_all.py  run_end_to_end.py  run_harness.py  run_pipeline.py  run_stage.py  self_audit.py  unblind.py
repo/tests/: conftest.py  test_baseline_shapes.py  test_binning_outputs_shapes.py  test_blinding_forbidden_keys_scan.py  test_blinding_no_leak.py  test_cli_smoke.py  test_coarsegrain_monotone.py  test_correlation_normalization.py  test_correlation_small.py  test_delta_m_entropy.py  test_e1_not_all_invalid_toy.py  test_e_assignment_per_galaxy_mean.py  test_extended_toggle.py  test_fit_range_excludes_low_s.py  test_gf2_rank.py  test_gf2_small_bruteforce.py  test_grid_covers_span.py  test_harness_reproducible.py  test_io.py  test_m3alpha_mc.py  test_m3alpha_rg.py  test_measurement_chain.py  test_metrics.py  (+11 more)
(+299 files in other folders)
